--- a/index.html
+++ b/index.html
@@ -703,11 +703,11 @@
                         <p class="mission-desc">宇宙機の温度を自律的に検知し、放射率を変化させるスマート材料。バナジウム酸化物を用いた相転移薄膜により、ヒーター電力の大幅削減と、究極の信頼性を実現します。</p>
                         <a href="research.html" class="btn-magnetic">詳細を見る</a>
                     </div>
-                    <div class="img-frame"><img src="image/SRDM.jpg" alt="SRD"></div>
+                    <div class="img-frame"><img src="image/SRDM.JPG" alt="SRD"></div>
                 </div>
 
                 <div class="mission-row reveal">
-                    <div class="img-frame"><img src="https://placehold.jp/3d4070/a78bfa/800x600.png?text=Metamaterial" alt="Metamaterial"></div>
+                    <div class="img-frame"><img src="image/SRDM.jpg" alt="Metamaterial"></div>
                     <div class="mission-content">
                         <div class="mission-number">02</div>
                         <span class="mission-label" style="color:var(--accent-sub);">METAMATERIAL</span>
