--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>太刀川研究室 | JAXA ISAS Spacecraft Thermal Control</title>
+    <meta name="google-site-verification" content="x3MAQijxHXvzbyO8wmRfcapvr0eNZVokFrXF3hSOP_k" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800;900&family=Noto+Sans+JP:wght@300;400;700;900&display=swap" rel="stylesheet">
     <style>
         /* === 1. DESIGN SYSTEM === */
