--- a/index.html
+++ b/index.html
@@ -699,9 +699,9 @@
                 <div class="mission-row reveal">
                     <div class="mission-content">
                         <div class="mission-number">01</div>
-                        <span class="mission-label">SMART RADIATOR</span>
-                        <h2 class="mission-title">自律型放射率可変デバイス<br>「スマートラジエータ」</h2>
-                        <p class="mission-desc">宇宙機の温度を自律的に検知し、放射率を変化させるスマート材料。バナジウム酸化物を用いた相転移薄膜により、ヒーター電力の大幅削減と、究極の信頼性を実現します。</p>
+                        <span class="mission-label">SMART RADIATION DEVICE</span>
+                        <h2 class="mission-title">放射率可変素子<br>「SRD：Smart Radiation Device」</h2>
+                        <p class="mission-desc">温度によって自律的に放射率（排熱能力）を変化させる新デバイス。低温では排熱しなくなるため、ヒータ電力の削減に貢献。</p>
                         <a href="research.html" class="btn-magnetic">詳細を見る</a>
                     </div>
                     <div class="img-frame"><img src="image/SRDM.JPG" alt="SRD"></div>
@@ -710,12 +710,12 @@
                 <div class="mission-row reveal">
                     <div class="mission-content">
                         <div class="mission-number">02</div>
-                        <span class="mission-label" style="color:var(--accent-sub);">METAMATERIAL</span>
-                        <h2 class="mission-title">メタマテリアル放熱技術</h2>
-                        <p class="mission-desc">ナノスケールの微細構造により、太陽光吸収を抑えつつ排熱性能を最大化する理想的な表面を創出します。</p>
+                        <span class="mission-label" style="color:var(--accent-sub);">METAMATERIAL RADIATOR</span>
+                        <h2 class="mission-title">メタマテリアルラジエータ</h2>
+                        <p class="mission-desc">ナノスケールの微細構造により、自由自在な熱光学特性を実現。最先端の技術を組み合わせた、革新的な技術。</p>
                         <a href="research.html" class="btn-magnetic" style="border-color:var(--accent-sub);">詳細を見る</a>
                     </div>
-                    <div class="img-frame"><img src="image/SRDM.jpg" alt="Metamaterial"></div>
+                    <div class="img-frame"><img src="image/MIM.PNG" alt="Metamaterial"></div>
                 </div>
 
                 <div class="mission-row reveal">
@@ -723,10 +723,10 @@
                         <div class="mission-number">03</div>
                         <span class="mission-label" style="color:var(--accent-pink);">RADIO-TRANSPARENT</span>
                         <h2 class="mission-title">電波透過型断熱材<br>「COSF」</h2>
-                        <p class="mission-desc">これまでの断熱材は電波を邪魔してしまいましたが、COSFは電波を通します。これにより、アンテナのすぐ下など、今まで断熱できなかった場所も守れるようになります。</p>
+                        <p class="mission-desc">従来の断熱材（MIM)は金属を使用しているため電波を通さなかった。つまり、アンテナ付近には使えなかった。COSFは金属を使用していない新型の断熱材。アンテナの断熱も可能に。</p>
                         <a href="research.html" class="btn-magnetic" style="border-color:var(--accent-pink);">詳細を見る</a>
                     </div>
-                    <div class="img-frame"><img src="https://placehold.jp/3d4070/ff79c6/800x600.png?text=COSF" alt="COSF"></div>
+                    <div class="img-frame"><img src="image/COSF.PNG" alt="COSF"></div>
                 </div>
 
             </div>
